# CV-Matching

./: .gitignore  README.md  pyproject.toml
config/: settings.example.toml
data/: cv.example.txt  manual_jobs.example.csv
docs/: scheduling.md
scripts/: extract_indeed_visible_jobs.js  extract_indeed_visible_jobs_json.js  extract_linkedin_visible_jobs.js  extract_linkedin_visible_jobs_json.js  import_manual_jobs_csv.py  import_manual_jobs_csv.sh  indeed_click_next_page.js  linkedin_click_next_page.js  open_indeed_profile.py  open_indeed_profile.sh  open_indeed_searches.py  open_indeed_searches.sh  open_jobs_dashboard.sh  open_linkedin_profile.py  open_linkedin_profile.sh  open_linkedin_searches.py  open_linkedin_searches.sh  review_indeed_in_chrome.sh  review_linkedin_all_pages_in_chrome.sh  review_linkedin_in_chrome.sh  run_daily_scan.sh  save_indeed_from_chrome.py  save_indeed_from_chrome.sh  save_linkedin_from_chrome.py  save_linkedin_from_chrome.sh  scan_indeed_jobs.sh  scan_linkedin_indeed_parallel.sh  scan_linkedin_jobs.sh
src/cv_job_matcher/: __init__.py  browser_runtime.py  cli.py  config.py  dashboard.py  database.py  filters.py  matcher.py  models.py  scanner.py
src/cv_job_matcher/sources/: __init__.py  base.py  csv_source.py  indeed_browser.py  linkedin_browser.py  remotive.py  rss.py
tests/: test_cli.py  test_csv_source.py  test_dashboard.py  test_database.py  test_indeed_browser.py  test_linkedin_browser.py  test_matcher.py  test_scanner.py
