[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-job-matcher"
version = "0.1.0"
description = "Scan job sources, match postings to a CV, and track applications."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "CV Job Matcher" }]
dependencies = [
  "playwright>=1.60.0",
  "tomli>=2; python_version < '3.11'"
]

[project.scripts]
job-matcher = "cv_job_matcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
